--- a/jdstore/Gemfile
+++ b/jdstore/Gemfile
@@ -34,6 +34,8 @@ gem 'jbuilder', '~> 2.5'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
+gem 'font-awesome-rails'
+gem 'simple_form'
 gem 'devise'
 gem 'bootstrap-sass'
 group :development, :test do
