--- a/jdstore/Gemfile
+++ b/jdstore/Gemfile
@@ -38,6 +38,9 @@ gem 'font-awesome-rails'
 gem 'simple_form'
 gem 'devise'
 gem 'bootstrap-sass'
+gem 'carrierwave'
+gem 'mini_magick'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
