--- a/jdstore/Gemfile
+++ b/jdstore/Gemfile
@@ -34,6 +34,8 @@ gem 'jbuilder', '~> 2.5'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
+gem 'carrierwave'
+gem 'mini_magick'
 gem 'devise'
 gem 'bootstrap-sass'
 gem 'simple_form'
