--- a/jdstore/Gemfile
+++ b/jdstore/Gemfile
@@ -35,6 +35,8 @@ gem 'jbuilder', '~> 2.5'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 gem 'bootstrap-sass'
+gem 'carrierwave'
+gem 'mini_magick'
 gem 'font-awesome-rails'
 gem 'simple_form'
 gem 'devise'
