add OrderMailer function

--- a/jdstore/Gemfile
+++ b/jdstore/Gemfile
@@ -35,6 +35,7 @@ gem 'jbuilder', '~> 2.5'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 gem 'bootstrap-sass'
+gem 'letter_opener', group: :development
 gem 'devise'
 gem 'simple_form'
 gem 'font-awesome-rails'
